# rs-cap

./: .gitignore  .rustfmt.toml  Cargo.toml  README  \
src/: alert.rs  area.rs  circle.rs  common_alerting_protocol.rs  error.rs  event_code.rs  geocode.rs  info.rs  lib.rs  parameter.rs  point.rs  polygon.rs  reference.rs  resource.rs  utilities.rs
src/common_alerting_protocol/: alert.rs  area.rs  circle.rs  deserialise_error.rs  deserialize_from_xml.rs  event_code.rs  geocode.rs  info.rs  parameter.rs  point.rs  polygon.rs  reference.rs  resource.rs  utilities.rs
tests/: alaska.cap  builder.rs  canada.cap  canada.xml  canada_xml_test.rs  cap_files_tests.rs  doc_test.rs  utah.cap
tests/cap_files/: airnow.xml  canada_large.xml
